# python-advanced-examples

./: .gitattributes  .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
pxgrid_util/: __init__.py  _version.py  config.py  create_account_config.py  filtering.py  pxgrid.py  ws_stomp.py
sample_macs/: sample_mac_addrs_1000.txt  sample_mac_addrs_10000.txt
tests/: test_filtering.py  test_ws_stomp.py
